--- a/Dav888.html
+++ b/Dav888.html
@@ -56,14 +56,14 @@
     
 
     <div class="gallery" style="align-items: center">
-        <img src="Nkar1.jpg" onclick="openImage(this)" height="20px">
-        <img src="Nkar2.jpg" onclick="openImage(this)" height="20px">
-        <img src="Nkar3.jpg" onclick="openImage(this)" height="20px">
-        <img src="Nkar4.jpg" onclick="openImage(this)" height="20px">
-        <img src="Nkar5.jpg" onclick="openImage(this)" height="20px">
-        <img src="Nkar6.jpg" onclick="openImage(this)" height="20px">
-        <img src="Nkar7.jpg" onclick="openImage(this)" height="20px">
-        <img src="Nkar8.jpg" onclick="openImage(this)" height="20px">
+        <img src="https://dav777dav.github.io/dav/Nkarner/Nkar1.jpg" onclick="openImage(this)" height="20px">
+        <img src="https://dav777dav.github.io/dav/Nkarner/Nkar2.jpg" onclick="openImage(this)" height="20px">
+        <img src="https://dav777dav.github.io/dav/Nkarner/Nkar3.jpg" onclick="openImage(this)" height="20px">
+        <img src="https://dav777dav.github.io/dav/Nkarner/Nkar4.jpg" onclick="openImage(this)" height="20px">
+        <img src="https://dav777dav.github.io/dav/Nkarner/Nkar5.jpg" onclick="openImage(this)" height="20px">
+        <img src="https://dav777dav.github.io/dav/Nkarner/Nkar6.jpg" onclick="openImage(this)" height="20px">
+        <img src="https://dav777dav.github.io/dav/Nkarner/Nkar7.jpg" onclick="openImage(this)" height="20px">
+        <img src="https://dav777dav.github.io/dav/Nkarner/Nkar8.jpg" onclick="openImage(this)" height="20px">
     </div>
 
     <div class="overlay" onclick="closeImage()">
